[package]
name = "av-stream-info-rust"
version = "0.10.1"
authors = ["segler_alex <segler_alex@web.de>"]
repository = "https://github.com/segler-alex/av-stream-info-rust"
categories = ["network-programming", "parsing"]
license = "MIT"
description = "Analyze a http/https internet address and display information if an audio or video stream has been found. All information is extracted from metainformation."
readme = "README.md"
edition = "2018"

[dependencies]
env_logger = "0.8.3"
hls_m3u8 = "0.4.0"
log = "0.4.14"
native-tls = "0.2.7"
playlist-decoder = "0.8.2"
reqwest = { version = "0.11.3", features = ["blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tree_magic = "0.2.3"
url = "2.2.2"