[package]
name = "av-stream-info-rust"
version = "0.10.3"
authors = ["segler_alex <segler_alex@web.de>"]
repository = "https://github.com/segler-alex/av-stream-info-rust"
categories = ["network-programming", "parsing"]
license = "MIT"
description = "Analyze a http/https internet address and display information if an audio or video stream has been found. All information is extracted from metainformation."
readme = "README.md"
edition = "2018"

[dependencies]
env_logger = "0.10.0"
hls_m3u8 = "0.4.1"
log = "0.4.20"
native-tls = "0.2.11"
playlist-decoder = "0.9.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
url = "2.4.1"